--- a/220514/220514.md
+++ b/220514/220514.md
@@ -107,3 +107,77 @@ $ cargo build --release
 ```
 
 - 릴리즈 후 target/release 실행파일 있는지 확인
+
+# 3. 추리게임 튜토리얼
+
+```
+새 프로젝트 만들기!
+$ cargo new guessing_game --bin
+$ cd guessing_game
+Filename : src/main.rs
+```
+
+```
+use std::io;
+fn main() {
+    println!("Guess the number!");
+    println!("Please input your guess.");
+    let mut guess = String::new();
+    io::stdin().read_line(&mut guess)
+        .expect("Failed to read line");
+    println!("You guessed: {}", guess);
+}
+```
+
+- std::io 는 input/output 라이브러리를 사용하기 위함입니다.
+
+- 러스트는 모든 프로그램의 스코프에 prelude 타입들을 가져옵니다.
+- 만약 없다면 use 를 이용하여 명시적으로 가저와야합니다.
+
+## 변수 만들기
+
+- let은 변수를 만듭니다. 하지만 let 만으로 가변 변수를 생성할 수 없습니다.
+
+```
+fn main() {
+let foo = 5; // immutable
+let mut bar = 5; // mutable
+}
+```
+
+## &
+
+- &는 코드의 여러 부분에서 데이터를 여러 번 메모리로 복사하지 않고 접근하기 위한 방법을 제공하는 참조자 임을 나타냅니다. 참조자는 복잡한 특성으로서 러스트의 큰 이점 중 하나가 -참조자를 사용함으로써 얻는 안전성과 용이성입니다. 이 프로그램을 작성하기 위해 참조자의 자세한 내용을 알 필요는 없습니다. 4장에서 참조자에 대해 전체적으로 설명할 것입니다. 지금 - 당장은 참조자가 변수처럼 기본적으로 불변임을 알기만 하면 됩니다. 따라서 가변으로 바꾸기 위해 &guess가 아니라 &mut guess로 작성해야 합니다.
+
+## expect
+
+io::Result가 Err인 경우 expect가 프로그램을 멈추게 함.
+
+## cargo.lock
+
+명시적 업그레이드를 하지 않는 경우 cargo.lock의 version을 이용
+
+## rand
+
+```
+extern crate rand;
+rand::thread_rng().gen_range(1, 101);
+extern crate rand; <- 외부 의존 크리에트가 잇음을 알ㄹ림
+```
+
+## 비교
+
+```
+use std::cmp::Ordering;
+    match guess.cmp(&secret_number) {
+        Ordering::Less    => println!("Too small!"),
+        Ordering::Greater => println!("Too big!"),
+        Ordering::Equal   => println!("You win!"),
+    }
+```
+
+- guess라는 변수와 크기 비교
+
+## 반복문
+
+loop{}
