--- a/220515/220515.md
+++ b/220515/220515.md
@@ -7,3 +7,7 @@
   - rustc .rs 로 직접 컴파일을 해서 ./로 컴파일 된 exe file을 직접 실행시키는 방식으로 테스트를 하기로 하였다.
 
 - git repo 에는 rustc 로만 컴파일을 해서 cargo 설치 없이 진행하도록. 코드관리 목적으로만 사용하자.
+
+# macro
+
+-
